# PraxiAlpha

./: .env.example  .gitignore  CHEATSHEET.md  CONTRIBUTING.md  DESIGN_DOC.md  Dockerfile  LICENSE  README.md  TRADE_ENTRY.md  WORKFLOW.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  config.py  database.py  main.py
backend/api/: __init__.py  deps.py
backend/api/routes/: __init__.py  alerts.py  calendar.py  charts.py  education.py  journal.py  performance.py  portfolio.py  reports.py  screener.py  stocks.py  strategies.py  trading.py
backend/models/: __init__.py  alert.py  dividend.py  economic_calendar.py  fundamentals.py  journal.py  macro.py  ohlcv.py  portfolio_snapshot.py  split.py  stock.py  strategy.py  trade.py  trade_snapshot.py  user.py  watchlist.py
backend/services/: __init__.py  candle_service.py  data_validation_service.py  journal_report_service.py  journal_service.py  scanner_service.py  stock_search.py  trade_snapshot_service.py  tv_validation_service.py
backend/services/analysis/: __init__.py  pattern_recognition.py  report_generator.py  screener.py  support_resistance.py  technical_indicators.py  trend_analyzer.py
backend/services/data_pipeline/: __init__.py  calendar_helpers.py  data_validator.py  economic_calendar_service.py  eodhd_fetcher.py  fred_fetcher.py  trading_economics_fetcher.py
backend/services/education/: __init__.py  chat_mentor.py  curriculum.py  lesson_engine.py  progress_tracker.py
backend/services/journal/: __init__.py  journal_analytics.py  journal_manager.py  reflection_prompts.py
backend/services/notifications/: __init__.py  email_sender.py  sms_sender.py  telegram_bot.py
backend/services/performance/: __init__.py  performance_engine.py  regime_analyzer.py  report_builder.py  strategy_comparison.py
backend/services/risk/: __init__.py  circuit_breakers.py  portfolio_rules.py  position_rules.py  risk_manager.py
backend/services/trading/: __init__.py  backtester.py  executor.py  position_sizer.py  strategy_base.py
backend/services/trading/strategies/: __init__.py  breakout.py  golden_cross.py  institutional_accumulation.py  mean_reversion.py  sector_rotation.py
backend/tasks/: __init__.py  analysis_tasks.py  celery_app.py  data_tasks.py  notification_tasks.py  trade_snapshot_task.py  trading_tasks.py
backend/tests/: __init__.py  test_analysis.py  test_api.py  test_backfill_full.py  test_backfill_macro.py  test_calendar_integration.py  test_candle_service.py  test_candlestick_chart.py  test_data_pipeline.py  test_data_validation.py  test_economic_calendar.py  test_journal.py  test_journal_report.py  test_journal_ui.py  test_performance.py  test_risk_management.py  test_scanner.py  test_scanner_ui.py  test_stock_search.py  test_strategies.py  test_trade_snapshots.py  test_tv_validation.py
data/: data_validation_failures.json
data/migrations/: env.py
data/migrations/versions/: .gitkeep
docs/: ARCHITECTURE.md  ASSESSMENT.md  BUILD_LOG.md  CHANGELOG.md  PROGRESS.md  STRATEGY_LAB.md  STRATEGY_LAB_BUILD_LOG.md
education_content/case_studies/: .gitkeep
education_content/fundamental_analysis/: .gitkeep
education_content/macro_analysis/: .gitkeep
education_content/mental_models/: .gitkeep
education_content/options/: .gitkeep
education_content/technical_analysis/: .gitkeep
frontend/: .gitkeep
notebooks/: .gitkeep
scripts/: backfill_data.py  backfill_full.py  ci_check.sh  create_candle_aggregates.py  debug_aapl_volume.py  debug_volume_multi.py  debug_yfinance.py  generate_report.py  setup_db.py  smh_overextension_analysis.py  soxx_overextension_analysis.py  validate_local.py  validate_tradingview.py
streamlit_app/: __init__.py  app.py
streamlit_app/components/: .gitkeep  __init__.py  candlestick_chart.py  economic_calendar.py  journal_api.py  journal_trade_detail.py  journal_trade_form.py  stock_search.py
streamlit_app/pages/: __init__.py  backtesting.py  charts.py  dashboard.py  education.py  journal.py  performance.py  reports.py  risk.py  scanner.py  screener.py  trading.py  validation.py
