[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxialpha"
version = "0.1.0"
description = "PraxiAlpha — Systematic trading and education platform for retail investors"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",

    # Finance / Data
    "eodhd>=1.0,<2",
    "fredapi>=0.5,<1",
    "httpx>=0.27,<1",

    # Web / API
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",

    # Task Queue
    "celery[redis]>=5.4,<6",
    "redis>=5.0,<6",

    # Visualization (for Streamlit MVP)
    "plotly>=5.18,<6",
    "streamlit>=1.38,<2",

    # Utilities
    "python-dotenv>=1.0,<2",
    "tenacity>=8.2,<10",
    "tqdm>=4.66,<5",
    "pytz>=2024.1",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
    "ipykernel>=6.29,<7",
    "jupyter>=1.0,<2",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: Depends() in FastAPI is the standard pattern

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["N806"]  # Allow UPPER_CASE constants inside functions
"backend/tests/*" = ["N806"]  # Allow PascalCase mock variables (MockFetcher, MockSession)

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
